# random-stuff

./: iterm_images.swift
advent-of-code-2023/Sources/: AdventOfCode.swift  Day01.swift  Day02.swift  Day03.swift  Day04.swift  Day05.swift  Day06.swift  Day07.swift  Day08.swift  Day09.swift  Day10.swift
advent-of-code-2023/day1/: main.swift
advent-of-code-2023/day2/: main.swift
advent-of-code-2023/day6/: main.swift
advent-of-code-2023/day7/: main.swift  main2.swift
alex-presents/: .firebaserc  index.html  package-lock.json  package.json  tailwind.config.ts
calculator-rs/: Cargo.toml
flappy-rust/: Cargo.toml
generics-pizza/: package-lock.json  package.json
json-schema-migrator/: Package.resolved  Package.swift  test.json
kotliny-to-do/: build.gradle  settings.gradle
next-generics-pizza/: package-lock.json  package.json
play-around-with-web/: index.html  main.js  package-lock.json  package.json  style.css
playlist-parser/: README.md  parser.py
rick-and-morty-fan-app/: .package.resolved  Project.swift
rusty-to-do/: Cargo.toml
rusty-to-do/src/: main.rs  todo.rs
swift-copy-with/: Package.resolved  Package.swift
til-app/: README.md  pubspec.yaml
to-do-collection/: README.md  open-api-scheme.yml
to-do-collection/rust-server/: .gitignore  Cargo.toml
to-do-collection/rust-server/migrations/: 20250917204351_init.up.sql
to-do-collection/rust-server/src/: app_state.rs  main.rs
to-do-collection/rust-server/src/core/: auth_store.rs  todo_store.rs
to-do-collection/rust-server/src/routes/: auth_route.rs  todo_route.rs
trying_sdl/: main.c
(+306 files in other folders)
