[package]
name = "rusty-to-do"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.28.0"
axum = "0.6.18"
tokio = { version = "1.28.2", features = ["full"]}
serde = { version = "1.0.164", features = ["derive"] }
