[package]
name = "todo-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["cors", "trace"]}
serde = { version = "1.0.189", features = ["serde_derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.7.1", features = ["sqlite"] }
tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

